# matter-engine

./: .gitignore  CLAUDE.md  GAMIFIED_PHYSICS_DESIGN.md  Makefile  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  README.md  ROADMAP.md  build-all.sh  build.sh  debug_output10.txt  debug_output11.txt  debug_output6.txt  debug_output7.txt  debug_output9.txt  imgui.ini  install_dependencies.sh  main.c  main.cpp  matter_surface_lib  platform-status.sh  run.bat  run.ps1  run.sh  setup-worktree.sh  surface_app  test_config.c  tests.c  tests.h
BasicWindowApp/: Makefile  main.cpp
ExplorerDemo/: Makefile  README.md  camera_rig.cpp  camera_rig.h  hud.cpp  hud.h  main.cpp  menu.cpp  menu.h  staged_camera.cpp  staged_camera.h
GPURayTraceExample/: Makefile  README.md  main.cpp
MatterEngine3/: .gitignore  Makefile
MatterSurfaceLib/: .gitignore  Makefile  main.cpp  run-windows.ps1  run_imposter.ps1
MatterViewer/: Makefile  camera_controller.cpp  camera_controller.h  camera_focus.cpp  camera_focus.h  console_log.cpp  console_panel.cpp  console_panel.h  editor_model.cpp  editor_model.h  gizmo.cpp  gizmo.h  glfw_vulkan_only_context.c  main.cpp  main_linux.cpp  os_open.cpp  os_open.h  properties_panel.cpp  properties_panel.h  properties_registry.cpp  properties_registry.h  scene_tree_panel.cpp  scene_tree_panel.h  selection_bounds.cpp  selection_bounds.h  selection_outline.cpp  selection_outline.h  selection_set.cpp  selection_set.h  shaders  shaders_gpu  toolbar_panel.cpp  (+11 more)
ParticleDynamicsExample/tests/: CMakeLists.txt  Makefile  basic_test.cpp  test_gamified_physics.cpp
(+1007 files in other folders)
